--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,18 @@
 
 <LinearLayout
     android:padding="20dp"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/intro"
+        android:maxLines = "20"
+        android:scrollbars = "vertical"
+        android:background="@color/colorAccent"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:background="@color/colorPrimary"
@@ -22,6 +32,12 @@
     <Button
         android:id="@+id/send"
         android:text="ENVOYER"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/get"
+        android:text="GET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
